fix chapter 2 and chapter 3

--- a/interim-report/Files/Chapter2.tex
+++ b/interim-report/Files/Chapter2.tex
@@ -20,7 +20,7 @@ a longer stroke for a given size.
 the whole system. There will be no bending moments in any of the members apart from the possibility of those due to strut eccentric loading. 
 \end{enumerate}
 \begin{center}
-	\begin{figure}[!h]
+	\begin{figure}[H]
 	\centering
 	\includegraphics[width=0.6\linewidth]{Figures/Fig11}
 	\caption[Linear co-ordinate control]{Linear co-ordinate control \cite{stewart1965platform}}
@@ -56,7 +56,7 @@ A wind tunnel is a large tube with air moving inside. This movement of air is us
 The first wind tunnel was built by Francis Wenham in 1871. However, it was the Wright Brothers who were the first to show the value of the wind tunnel in aerodynamic design with their 1902 wind tunnel.  The Wright Brothers’ wind tunnel was largely made of wood, with a glass window on the top to look down through and see the force balance, from which the
 lift and drag forces could be read. The wind tunnel was powered by a fan driven off a natural gas fuelled engine. Their tunnel was square of 16" by 16"(about 407mm by 407mm), and 6 foot long (about 1829mm), with a maximum test speed of 35 mph (about 56 km/h).
 \begin{center}
-	\begin{figure}[!h]
+	\begin{figure}[H]
 	\centering
 	\includegraphics[width=0.75\linewidth]{Figures/Fig2}
 	\caption[A Typical Wind Tunnel]{Diagram of a typical wind tunnel \cite{morris_force_2010}}
@@ -70,7 +70,7 @@ By the 1940’s supersonic wind tunnels were in use. In 1972 a cryogenic wind tu
 
 Today the largest wind tunnel in the world is the National Full-Scale Aerodynamics Complex at NASA's Ames Research Center, which has a test section of cross-section 80 ft by 100 ft (24 m x 31 m). The types of instruments in common use in wind tunnels include boundary layer rakes, tufts, pitot tubes, pressure sensitive paint, smoke, and static pressure taps \cite{morris_force_2010}.
 \begin{center}
-\begin{figure}[!h]
+\begin{figure}[H]
 	\centering
 	\includegraphics{Figures/Fig3}
 	\caption[NASA Wind Tunnels]{NASA wind tunnels used to test new air-plane designs \cite{NASA}}
@@ -80,7 +80,7 @@ Today the largest wind tunnel in the world is the National Full-Scale Aerodynami
 NASA uses wind tunnels to test scale models of aircraft and spacecraft. Wind tunnels help NASA to test ideas of making airplanes better and safer. They are also used to help engineers in designing spacecraft that will work in other planets such as mars - the wind tunnel can be used to simulate objects in an atmosphere that's thinner than ours e.g. an atmosphere that's exactly like the Martian atmosphere. NASA has wind tunnels of different types and sizes. Some are low-speed wind tunnels, others are hypersonic i.e. they are made to carry out tests at 4,000 mph (6437 kph) \cite{NASA}.
 \begin{center}
      %&\vspace*{-4.0cm}
-    \begin{figure}[!h]
+    \begin{figure}[H]
 \centering
 \includegraphics{Figures/Fig4}
 \caption[NASA Wind tunnel - space application]{NASA wind tunnels used to test the design of heavy-lift rocket \cite{NASA}}
@@ -102,7 +102,7 @@ Several different types of external force balances are available for wind tunnel
 \item Pyramidal
 \end{enumerate}
 \begin{center}
-	\begin{figure}[!h]
+	\begin{figure}[H]
 	\centering
 	\includegraphics{Figures/Fig6}
 	\caption[External Force balances]{Typical configurations for external force balances \cite{ferreira2015design}}
@@ -123,7 +123,7 @@ The different kinds of internal balances can be made based on:
 \item Shape i.e. box balance and sting balance
 \end{enumerate} 
 \begin{center}
-	\begin{figure}[!h]
+	\begin{figure}[H]
 	\centering
 	\includegraphics[width=0.8\linewidth]{Figures/Fig7}
 	\caption[Internal force balances]{Typical configurations for internal force balances. \textit{Left to right:} Box balance and sting balance \cite{ferreira2015design}.}
@@ -143,7 +143,7 @@ Electric measurement techniques are preferred for Force balance applications. On
 
 Metal foil strain gauges are widely used. This type of strain gauge provide more precise strain values than wire strain gauges. However, since the relative changes on electric resistance of the strain gauge are so small, it is necessary to develop an effective method to measure them because each strain gauge would require extremely accurate signal measurements. The solution is to have a set of strain gauges coupled in order to minimize the required accuracy, forming a force transducer i.e. the \textit{Wheatstone bridge}.
 \begin{center}
-		\begin{figure}[!h]
+		\begin{figure}[H]
 		\centering
 		\includegraphics[width=0.6\linewidth]{Figures/Fig9}
 		\caption[Wheatstone Bridge Circuit]{Wheatstone Bridge Circuit \cite{ferreira2015design}}
@@ -155,7 +155,7 @@ It is important to define the desired aerodynamic angles and to guarantee that t
 
 Angle of attack (\textalpha)- angle measured between the longitudinal axis of the model and the direction of the flow on a vertical (Figure 2.4)
 \begin{center}
-	\begin{figure}[!h]
+	\begin{figure}[H]
 	\centering
 	\includegraphics[width=0.6\linewidth]{Figures/Fig10}
 	\caption[Angle of attack]{Angle of attack (\textalpha) \cite{ferreira2015design}}
