--- a/interim-report/Files/Chapter3.tex
+++ b/interim-report/Files/Chapter3.tex
@@ -93,7 +93,7 @@ The position vector of ith upper junction point with respect to the base frame i
 q_{i}^{B} = t + R_{p}^{B} * q_{i}^{p}
 \end{equation}
 \begin{center}
-	\begin{figure}[!h]
+	\begin{figure}[H]
 	\centering
 	\includegraphics[width=0.6\linewidth]{Figures/Fig12}
 	\caption[Closed-loop representation]{Closed-loop representation of one leg of the Stewart Platform \cite{csumnu2017simulation}}
@@ -127,7 +127,7 @@ l_{i}^2 = (a_{x} * r_{p} * c_{i} + b_{x}*r_{p}*s_{i}
 \subsection{Stewart Platform Configurations}
 Stewart platforms can take three primary configurations i.e. 3-3 type, 3-6 type or 6-6 type.
 \begin{center}
-	\begin{figure}[!h]
+	\begin{figure}[H]
 	\centering
 	\includegraphics{Figures/stewart}
 	\caption[Configurations]{Type 3-3, 3-6 and 6-6 respectively
@@ -241,7 +241,7 @@ Stainless Steel & 7.5 - 8.0 & 215\\
 \end{center}
 Aluminium 6061 is preferable for the moving platform since it is lightweight and can withstand significant loads without yielding. It also has good machinability (50 per cent). A sheet metal of 1.5mm thickness will make a suitable platform to be used in wind tunnel testing.
 \begin{center}
-	\begin{figure}[!h]
+	\begin{figure}[H]
 	\centering
 	\includegraphics[width=0.6\linewidth]{Figures/Flat}
 	\caption[Moving Platform]{Moving Platform (Flat Pattern)}
@@ -250,7 +250,7 @@ Aluminium 6061 is preferable for the moving platform since it is lightweight and
 
 The moving platform has flanges to provide linking points of the Stewart Platform legs. A flange of 30mm is considered. This will allow ample space for the spherical joint (whose connecting side diameter is 10mm) to fit and to be well centred.
 \begin{center}
-	\begin{figure}[!h]
+	\begin{figure}[H]
 	\centering
 	\includegraphics[width=0.6\linewidth]{Figures/Folded}
 	\caption[Moving Platform]{Moving Platform (Folded)}
@@ -261,7 +261,7 @@ Both stainless steel and mild steel would make a suitable base for the Stewart p
 
 Due to cost constraints and for the Stewart platform's overall weight (and without compromising on the platform stability), aluminium can be used to manufacture the base. A thickness of 2.5mm is selected.
 \begin{center}
-	\begin{figure}[!h]
+	\begin{figure}[H]
 	\centering
 	\includegraphics[width=0.6\linewidth]{Figures/Base}
 	\caption[Base Plates]{Base Plates}
@@ -305,7 +305,7 @@ From the previously selected dimensions i.e diameter of platform, diameter of ba
 
 Rod length = 140mm
 \begin{center}
-	\begin{figure}[!h]
+	\begin{figure}[H]
 	\centering
 	\includegraphics[width=0.6\linewidth]{Figures/Ideation}
 	\caption[Ideation]{Ideation technique to obtain rod length}
@@ -322,7 +322,7 @@ From local suppliers, 10mm aluminium rods are available and economical. The rods
 
 If solid rods are used, strain gauges of high sensitivity should be used.
 \begin{center}
-	\begin{figure}[!h]
+	\begin{figure}[H]
 	\centering
 	\includegraphics[width=0.8\linewidth]{Figures/Rod}
 	\caption[Aluminium rod]{Aluminium rod}
@@ -334,7 +334,7 @@ The test flange will be used to hold the strut during wind tunnel testing. For o
 
 The test flange should hold the strut for a considerable length in order to keep the rotation of the strut below certain predefined values and thus limiting torsion and bending behaviour of the strut during Wind Tunnel testing.
 \begin{center}
-	\begin{figure}[!h]
+	\begin{figure}[H]
 	\centering
 	\includegraphics[width=0.75\linewidth]{Figures/Test}
 	\caption[Test flange]{Test flange design}
@@ -342,7 +342,7 @@ The test flange should hold the strut for a considerable length in order to keep
 \end{center}
 The strut will go into the test section of the Wind tunnel at the Fluids lab in JKUAT. The strut should be long enough to position the model under testing in the middle of the test section. The strut will also be subjected to the flow forces in the wind tunnel. It should therefore be made of as small diameter as possible. A diameter 12.5mm of and a length of 400mm were considered, based on the Wind Tunnel set-up (Appendix).
 \begin{center}
-	\begin{figure}[!h]
+	\begin{figure}[H]
 	\centering
 	\includegraphics[width=0.75\linewidth]{Figures/Strut}
 	\caption[Strut]{Strut}
@@ -364,7 +364,7 @@ Spherical joints can be obtained from online stores. One such store is RS Compon
 \end{itemize}
 Based on the diameter of the available aluminium rods, Ball and socket joint M10 is selected.
 \begin{center}
-	\begin{figure}[!h]
+	\begin{figure}[H]
 	\centering
 	\includegraphics[width=0.6\linewidth]{Figures/Spherical}
 	\caption[Spherical Joint]{Spherical Joint available from RS Components Africa \cite{datasheet_spherical}}
@@ -372,13 +372,13 @@ Based on the diameter of the available aluminium rods, Ball and socket joint M10
 \end{center}
 The following dimensions are provided by the manufacturer:
 \begin{center}
-	\begin{figure}[!h]
+	\begin{figure}[H]
 	\centering
 	\includegraphics[width=0.8\linewidth]{Figures/Spherical Dimensions}
 	\caption[Spherical Joint Dimensions]{Spherical Joint Dimensions \cite{datasheet_spherical}}
 	\end{figure}
 \end{center}
-\begin{table}[!h]
+\begin{table}[H]
 \caption{Spherical Joint Dimensions}
 \end{table}
 \begin{tabular}{|l|l|l|l|l|l|l|l|l|l|l|l|}
@@ -393,7 +393,7 @@ The following dimensions are provided by the manufacturer:
 
 The Spherical joint was done on Autodesk Inventor and included in the Stewart Platform Assembly.
 \begin{center}
-	\begin{figure}[!h]
+	\begin{figure}[H]
 	\centering
 	\includegraphics[width=0.5\linewidth]{Figures/Spherical CAD}
 	\caption[Spherical Joint CAD]{Spherical Joint as designed on Autodesk Inventor}
@@ -410,7 +410,7 @@ Whereas linear actuators are relatively easy to control, they are very expensive
 \subsection{Servo Horn}
 This will provide the connection between the motor and the spherical joints hence the aluminium rods. An 8mm hole on one end for mounting the spherical joint and another hole 8.5mm that will allow coupling with the servo arm bush of 8.6mm. The 1mm gap ensure tight fitting.
 \begin{center}
-	\begin{figure}[!h]
+	\begin{figure}[H]
 	\centering
 	\includegraphics[width=0.6\linewidth]{Figures/Horn}
 	\caption{Servo horn}
@@ -456,19 +456,19 @@ The force sensor module will be used to measure the force and moments from the a
 \subsection{External Force Sensor}
 In this case it would require at least 3 orthogonally positioned load cells measuring each force component. Each load cell would be mechanically linked to the model such that forces experienced on each axis are measured by each load cell. 
 \begin{center}
-	\begin{figure}[!h]
+	\begin{figure}[H]
 		\centering
 		\includegraphics{Figures/modBal}
 		\caption[Diagram of a force balance]{Diagram of a force balance \cite{post_force_2010}}
 	\end{figure}
 \end{center}
-This configuration is, however, bulky by since it requires an additional external system for force measurements in addition to the Stewart platform for positioning the model. This is however complemented by the simplicity in calibration of the load cells and does not require a complex force transformation matrix and other issues with force amplification created by the use of an integrated system.
+This configuration is, however, bulky since it requires an additional external system for force measurements in addition to the Stewart platform for positioning the model. This is however complemented by the simplicity in calibration of the load cells and does not require a complex force transformation matrix and other issues with force amplification created by the use of an integrated system.
 \subsection{Stewart Platform as a force sensor}
 In this configuration the Stewart platform legs are used as force sensors by attaching strain gauges on the legs of platform. Similar work has been done by \cite{ferreira2015design} without the use of actuators as is proposed in this project. Using the Stewart platform as a force sensor requires the actuators to be locked with zero degrees of freedom.
 
 Four strain gauges are required for each leg for a full Wheatstone bridge configuration. 
 \begin{center}
-	\begin{figure}[!h]
+	\begin{figure}[H]
 		\centering
 		\includegraphics{Figures/loadConf}
 		\caption[Strain Gauge Configuration]{Strain Gauge Configuration \cite{noauthor_measuring_nodate}}
@@ -482,13 +482,13 @@ The output excitation of the Wheatstone bridge needs to be amplified as it resul
 
 The connection of the AD7193 to the microcontroller will be via Serial Peripheral Interface (SPI). The configuration is as shown in figure 3.8.3:
 \begin{center}
-\begin{figure}
+\begin{figure}[H]
 \centering
 \includegraphics[width=0.55\linewidth]{Figures/SPI}
 \caption[SPI configuration]{SPI configuration}
 \end{figure}
 \end{center}
-In this configuration the when the chip select of an amplifier is set to low, the microcontroller is able to obtain data from that strain gauge. This configuration allows for a four wire interface to connect to six strain gauge sensors and obtain measurements.
+In this configuration the when the chip select pin of an amplifier is set to low, the microcontroller is able to obtain data from that strain gauge. This configuration allows for a four wire interface to connect to six strain gauge sensors and obtain measurements.
 
 The HX711 however allows for the I2C like communication via two wires (serial clock (SCL) and Serial Data (SDA)). They however do not have hardware addresses thus many pins are required for the interface, This can however be remedied by the use of a shared SCL between each of the amplifier modules reducing the overall number of pins required to interface.
 
@@ -497,53 +497,65 @@ In such a case the forces experienced at the top of the platform are distributed
 
 If the platform is acted upon by an external wrench {$\vec{F}_e, \vec{M}_e$}, for static equilibrium of the body, the external wrench is statically balanced by the six leg forces of the Stewart platform. Representing the unit vector $\hat{I}_i$ along the i-th leg with respect to B, the leg force is given  by $\hat{I}_if_i$. Considering the force equilibrium of the platform along  three mutually perpendicular directions in B(XYZ), the following force equations can be obtained as in \cite{dwarakanath_design_2001}:
 
-$(F_e)_x = f_1I_{1x} + f_2I_{2x} + f_3I_{3x} + f_4I_{4x} + f_5I_{5x} + f_6I_{6x}$
-
-$(F_e)_y = f_1I_{1y} + f_2I_{2y} + f_3I_{3y} + f_4I_{4y} + f_5I_{5y} + f_6I_{6y}$
-
-$(F_e)_z = f_1I_{1z} + f_2I_{2z} + f_3I_{3z} + f_4I_{4z} + f_5I_{5z} + f_6I_{6z}$
-
+\begin{equation}
+	(F_e)_x = f_1I_{1x} + f_2I_{2x} + f_3I_{3x} + f_4I_{4x} + f_5I_{5x} + f_6I_{6x}
+\end{equation}
+\begin{equation}
+	(F_e)_y = f_1I_{1y} + f_2I_{2y} + f_3I_{3y} + f_4I_{4y} + f_5I_{5y} + f_6I_{6y}
+\end{equation}
+\begin{equation}
+	(F_e)_z = f_1I_{1z} + f_2I_{2z} + f_3I_{3z} + f_4I_{4z} + f_5I_{5z} + f_6I_{6z}
+\end{equation}
 where $(F_e)_x$, $(F_e)_y$ and $(F_e)_z$ are the external forces on the platform along three mutually perpendicular directions x, y and z of the frame B, respectively.
 
 The moment due to the forces $\hat{I}_if_i$ about the origin of B is $(\vec{b}_i x \hat{I}_i)f_i$. Considering the moment equilibrium about x, y and z axes of B, the following moment equations can be obtained as in \cite{dwarakanath_design_2001}:
 
-$(M_e)_x = f_1(\vec{b}_1 x \hat{I}_1)_x + f_2(\vec{b}_2 x \hat{I}_2)_x + f_3(\vec{b}_3 x \hat{I}_3)_x + f_4(\vec{b}_4 x \hat{I}_4)_x + f_5(\vec{b}_5 x \hat{I}_5)_x + f_6(\vec{b}_6 x \hat{I}_6)_x$
-
-}$(M_e)_y = f_1(\vec{b}_1 x \hat{I}_1)_y + f_2(\vec{b}_2 x \hat{I}_2)_y + f_3(\vec{b}_3 x \hat{I}_3)_y + f_4(\vec{b}_4 x \hat{I}_4)_y + f_5(\vec{b}_5 x \hat{I}_5)_y + f_6(\vec{b}_6 x \hat{I}_6)_y$
-
-$(M_e)_z = f_1(\vec{b}_1 x \hat{I}_1)_z + f_2(\vec{b}_2 x \hat{I}_2)_z + f_3(\vec{b}_3 x \hat{I}_3)_z + f_4(\vec{b}_4 x \hat{I}_4)_z + f_5(\vec{b}_5 x \hat{I}_5)_z + f_6(\vec{b}_6 x \hat{I}_6)_z$
+\begin{equation}
+	(M_e)_x = f_1(\vec{b}_1 x \hat{I}_1)_x + f_2(\vec{b}_2 x \hat{I}_2)_x + f_3(\vec{b}_3 x \hat{I}_3)_x + f_4(\vec{b}_4 x \hat{I}_4)_x + f_5(\vec{b}_5 x \hat{I}_5)_x + f_6(\vec{b}_6 x \hat{I}_6)_x
+\end{equation}
+\begin{equation}
+	(M_e)_y = f_1(\vec{b}_1 x \hat{I}_1)_y + f_2(\vec{b}_2 x \hat{I}_2)_y + f_3(\vec{b}_3 x \hat{I}_3)_y + f_4(\vec{b}_4 x \hat{I}_4)_y + f_5(\vec{b}_5 x \hat{I}_5)_y + f_6(\vec{b}_6 x \hat{I}_6)_y
+\end{equation}
+\begin{equation}
+	(M_e)_z = f_1(\vec{b}_1 x \hat{I}_1)_z + f_2(\vec{b}_2 x \hat{I}_2)_z + f_3(\vec{b}_3 x \hat{I}_3)_z + f_4(\vec{b}_4 x \hat{I}_4)_z + f_5(\vec{b}_5 x \hat{I}_5)_z + f_6(\vec{b}_6 x \hat{I}_6)_z
+\end{equation}
 
 where $(M_e)_x$, $(M_e)_y$ and $(M_e)_z$ are the external moments on the platform  about the three coordinate axes of B. Combining the equations the relationship between the external wrench and the forces experienced by the legs can be expressed as follows:
-$$
+\begin{equation}
+	$$
 \begin{Bmatrix}
-\vec{F}_e \\
-\vec{M}_e \\
+	\vec{F}_e \\
+	\vec{M}_e \\
 \end{Bmatrix} = [H]\{F\}
 $$
+\end{equation}
+
 
 \section{Velocity Measurement}
 An important part in wind tunnel measurements is the measure of pressure at specific points in the wind tunnel and computing the corresponding air speed. This is achieved by the use of a pitot probe. 
 \begin{center}
-\begin{figure}
+\begin{figure}[H]
 \centering
 \includegraphics[width=0.6\linewidth]{Figures/pitot}
-\caption[Pitot-static tube]{Pitot-static tube \cite{noauthor_wind_nodate}}
+\caption[Pitot-static tube]{Pitot-static tube \cite{viquerat_continuous_2006}}
 \end{figure}
 \end{center}
-The equation relates the speed of the fluid at a point to both the mass density of the fluid and the pressures at the same point in the flow field. For steady flow of an incompressible fluid for which viscosity can be neglected, the fundamental equation has the form:
+For steady flow of an incompressible fluid for which viscosity can be neglected, the fundamental equation has the form:
 
-$$ v = \sqrt{\frac{2(P_{0} - P)}{\rho}}$$
+\begin{equation}
+	v = \sqrt{\frac{2(P_{0} - P)}{\rho}}
+\end{equation}
 
 Where V is the speed of the fluid, P0 is the total, also called the stagnation, pressure at that point of measurement, and p is the static pressure at the same point.
 
 Three pitot probes are to be used in the wind tunnel i.e. in the test section, intake and diffuser sections.
 
-Module communicates to the microcontroller using a TTL to RS485. Each module is individually addressable further simplifying the interface as shown in the figure:
+Module communicates to the microcontroller using a TTL to RS485. Each module is individually addressable further simplifying the interface as shown in figure 3.9.2:
 \begin{center}
-\begin{figure}
+\begin{figure}[H]
 \centering
 \includegraphics{Figures/modbus}
-\caption[RS485 communication]]{RS485 communication}
+\caption[RS485 communication]{RS485 communication}
 \end{figure}
 \end{center}
 
@@ -551,18 +563,18 @@ Module communicates to the microcontroller using a TTL to RS485. Each module is 
 The purpose of the interface is to enable control of the platform position as well as to obtain measured data from the strain gauges and pitot tubes. 
 The general layout is as shown in the figure below:
 \begin{center}
-\begin{figure}
+\begin{figure}[H]
 \centering
 \includegraphics{Figures/Interface}
 \caption[Human Machine Interface]{Human Machine Interface}
 \end{figure}
 \end{center}
 
-The primary interface between the microcontroller is via wirelessly via web sockets using User Datagram Protocol (UDP) interface. This allows for high speed low latency communication without need for a wired connection. It also allows for bidirectional transfer of information thus allowing for both control input and output of measured values. The interface is to enable the abstraction of data acquisition and actuator control to a simple interaction with buttons and other visual interfaces available in a computer program.
+The primary interface between the microcontroller is wirelessly via web sockets utilizing the User Datagram Protocol (UDP) interface. This allows for high speed low latency communication without need for a wired connection. It also allows for bidirectional transfer of information thus allowing for both control input and output of measured values. The interface is to enable the abstraction of data acquisition and actuator control to a simple interaction with buttons and other visual interfaces available in a computer program.
 
 The decoupling of the microcontroller and the program to be hosted on the desktop allows for advanced data processing such as application of filters and resolving measurements into usable information. It also allows for the use of more powerful processor and high level programming languages to more effectively perform complex calculations without taking a toll the sensor sampling rate that would occur with on board processing in the microcontroller.
 \begin{center}
-	\begin{figure}[!h]
+	\begin{figure}[H]
 	\centering
 	\includegraphics[width=0.7\linewidth]{Figures/Fig14}
 	\caption[Control Algorithm]{Control Algorithm for the Stewart Platform with Force Measurement}
@@ -574,7 +586,7 @@ This section looks at the design of the circuits used to power and get readings 
 \subsection{Microcontroller}
 The main requirement for this is the need for wireless communication via WIFI and large number of I/O interface at cost effective rate. This brings down the options to the ESP32 and Raspberry Pi RP2040. Both are dual core devices which are feature rich however the raspberry rp2040 only has 28 I/O pins while the ESP32 has 34 pins and due to this the ESP 32 was chosen. 
 \begin{center}
-	\begin{figure}[!h]
+	\begin{figure}[H]
 	\centering
 	\includegraphics{Figures/mcu}
 	\caption[Microcontroller]{Microcontroller}
@@ -587,7 +599,7 @@ The power supply chosen is a AC/DC power converter. Since the highest voltage re
 Both 5 and 3.3 volts are required in the PCB for other peripherals. To this end a buck converter and linear converter are used for 5 ad 3.3 volts respectively.
 
 \begin{center}
-	\begin{figure}[!h]
+	\begin{figure}[H]
 	\centering
 	\includegraphics{Figures/buck}
 	\caption[Buck converter]{Buck Converter 12V to 5v}
@@ -595,7 +607,7 @@ Both 5 and 3.3 volts are required in the PCB for other peripherals. To this end 
 \end{center}
 
 \begin{center}
-	\begin{figure}[!h]
+	\begin{figure}[H]
 	\centering
 	\includegraphics{Figures/5233}
 	\caption[Linear Voltage Converter]{Linear level converter 5V to 3.3v}
@@ -607,7 +619,7 @@ The linear converter dissipates the energy loss though heat while buck converter
 \subsection{Servo Control}
 Since the microcontroller used (ESP32) is based on 3.3V logic. There is a need for 5V logic to control the servos and thus a bidirectional logic level converter is utilized which leverages an internal drain N-channel MOSFET. 
 \begin{center}
-	\begin{figure}[!h]
+	\begin{figure}[H]
 	\centering
 	\includegraphics{Figures/logik}
 	\caption[Bidirectional Logic Level converter]{Bidirectional Logic Level converter}
