--- a/interim-report/Main_file.tex
+++ b/interim-report/Main_file.tex
@@ -20,6 +20,7 @@
 \usepackage{MnSymbol}
 \usepackage{pdfpages}
 %\usepackage{breqn}
+\usepackage{float}
 %-----Tex width---------------------------------
 \textwidth 16cm
 
