--- a/interim-report/Files/Chapter5.tex
+++ b/interim-report/Files/Chapter5.tex
@@ -1,9 +1,6 @@
-\chapter{Conclusion}
-\begin{enumerate}
-\item A six-DOF Stewart platform has been designed. This platform can achieve 3 linear and 3 angular movements. It has a high quality index i.e. 0.86 and is therefore mechanically feasible.
-\item From Finite Element Analysis, the six legs of the Stewart platform experience significant strains which can be used to obtain force measurements during model testing in Wind Tunnel experiments.
-\item The flow velocity measurements have been designed and wind tunnel placement of the pitot tubes been demonstrated.
-\item The HMI has also been designed and programmed only awaiting integration with the main electronics.
-\end{enumerate}
-
-
+\chapter*{Conclusion}
+The current stewart platform configuration was modified to allow for six degrees of freedom which included three translations and three rotations.
+The platform has a high quality index i.e. 0.86 and is therefore mechanically feasible. From Finite Element Analysis, the six legs of the Stewart platform experience significant strains which can be used to obtain force measurements during model testing in Wind Tunnel experiments.
+The electronic circuit to obtain flow velocity measurements and load measurements was also designed. This also included the sensor selection and placement in the wind tunnel. 
+The Human machine interactive interface was also designed and programmed. The protocol for communication was also selected to allow data acquisition as well as sending instructions to the platform. 
+The final stages involve integration of all the modules to create working force balance and its control system.
