fix(chapter4) wrong caption

--- a/interim-report/Files/Chapter4.tex
+++ b/interim-report/Files/Chapter4.tex
@@ -83,6 +83,6 @@ The schematics from the electrical designs as seen in the appendix were routed t
 	\begin{figure}[H]
 	\centering
 	\includegraphics[width=0.7\linewidth]{Figures/pcb}
-	\caption[HMI Dashboard]{HMI Dashboard}
+	\caption[Printed Circuit Board view]{Printed Circuit Board view}
 	\end{figure}
 \end{center}
